fixing scrollbar in save Station page, config service worker

--- a/src/css/SaveStnInfo.css
+++ b/src/css/SaveStnInfo.css
@@ -4,8 +4,15 @@
   padding-left: 5px;
   display: flex;
   white-space: nowrap;
-  overflow: scroll;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
+
+.saveStnETA::-webkit-scrollbar {
+  display: none;
+}
+
 .saveStnBox {
   padding-right: 3px;
 }
@@ -30,7 +37,7 @@
   padding-top: 5px;
 }
 
-.header__time{
+.header__time {
   padding-right: 5px;
   font-size: small;
   color: white;
